// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationMap component doesnt shows warning if geo is provided 1`] = `
<EuiErrorBoundary>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    wrap={true}
  >
    <Styled(EuiFlexItem)>
      <LocationStatusTags
        locations={
          Array [
            Object {
              "geo": Object {
                "location": Object {
                  "lat": "40.730610",
                  "lon": " -73.935242",
                },
                "name": "New York",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:06.536Z",
            },
            Object {
              "geo": Object {
                "location": Object {
                  "lat": "52.487448",
                  "lon": " 13.394798",
                },
                "name": "Tokyo",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:04.354Z",
            },
          ]
        }
      />
    </Styled(EuiFlexItem)>
    <EuiHideFor
      sizes={
        Array [
          "xs",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            upPoints={
              Array [
                Object {
                  "lat": "40.730610",
                  "lon": " -73.935242",
                },
                Object {
                  "lat": "52.487448",
                  "lon": " 13.394798",
                },
              ]
            }
          />
        </styled.div>
      </EuiFlexItem>
    </EuiHideFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;

exports[`LocationMap component renders correctly against snapshot 1`] = `
<EuiErrorBoundary>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    wrap={true}
  >
    <Styled(EuiFlexItem)>
      <LocationStatusTags
        locations={
          Array [
            Object {
              "geo": Object {
                "location": Object {
                  "lat": "40.730610",
                  "lon": " -73.935242",
                },
                "name": "New York",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:06.536Z",
            },
            Object {
              "geo": Object {
                "location": Object {
                  "lat": "52.487448",
                  "lon": " 13.394798",
                },
                "name": "Tokyo",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:04.354Z",
            },
            Object {
              "geo": Object {
                "name": "Unnamed-location",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:02.753Z",
            },
          ]
        }
      />
    </Styled(EuiFlexItem)>
    <EuiHideFor
      sizes={
        Array [
          "xs",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <LocationMissingWarning />
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            upPoints={
              Array [
                Object {
                  "lat": "40.730610",
                  "lon": " -73.935242",
                },
                Object {
                  "lat": "52.487448",
                  "lon": " 13.394798",
                },
              ]
            }
          />
        </styled.div>
      </EuiFlexItem>
    </EuiHideFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;

exports[`LocationMap component renders named locations that have missing geo data 1`] = `
<EuiErrorBoundary>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    wrap={true}
  >
    <Styled(EuiFlexItem)>
      <LocationStatusTags
        locations={
          Array [
            Object {
              "geo": Object {
                "location": undefined,
                "name": "New York",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:06.536Z",
            },
          ]
        }
      />
    </Styled(EuiFlexItem)>
    <EuiHideFor
      sizes={
        Array [
          "xs",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <LocationMissingWarning />
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            upPoints={Array []}
          />
        </styled.div>
      </EuiFlexItem>
    </EuiHideFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;

exports[`LocationMap component shows warning if geo information is missing 1`] = `
<EuiErrorBoundary>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    wrap={true}
  >
    <Styled(EuiFlexItem)>
      <LocationStatusTags
        locations={
          Array [
            Object {
              "geo": Object {
                "location": Object {
                  "lat": "52.487448",
                  "lon": " 13.394798",
                },
                "name": "Tokyo",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:04.354Z",
            },
            Object {
              "geo": Object {
                "name": "Unnamed-location",
              },
              "summary": Object {
                "down": 0,
                "up": 4,
              },
              "timestamp": "2020-01-13T22:50:02.753Z",
            },
          ]
        }
      />
    </Styled(EuiFlexItem)>
    <EuiHideFor
      sizes={
        Array [
          "xs",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <LocationMissingWarning />
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            upPoints={
              Array [
                Object {
                  "lat": "52.487448",
                  "lon": " 13.394798",
                },
              ]
            }
          />
        </styled.div>
      </EuiFlexItem>
    </EuiHideFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;
